[project]
dependencies = [
    "einops>=0.8.1",
    "numpy>=1.20.0",
    "pandas>=2.3.3",
    "polars>=1.26.0",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "pyyaml>=6.0"
]
name = "ttlm"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "ruff==0.11.7",
]
docs = [
    "ipykernel>=5.3, <7.0",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
fail_under = 10
show_missing = true

[tool.pytest]

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov . -ra"""

[tool.uv]
no-build-isolation-package = []
